fixing scroll alignment

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 
 body {
   padding-top: 70px;
+  background-color: black;
 }
 
 html, body {
@@ -31,25 +32,16 @@ html, body {
 }
 
 .logo img {
-  width: 73px;
+  width: 69px;
   height: 56px;
-}
-
-.logo {
-  position: relative;
-  float: right;
-  top: 13px;
-  left: 25px;;
 }
 
 #homeSection img {
   position: relative;
-  top: 80px;
   width: 100%;
 }
 
 .navbar {
-  color: transparent;
   height: 80px;
 }
 
@@ -62,9 +54,9 @@ h1 {
 }
 
 #aboutSection {
-  margin-top: -20px;
+  margin-top: 80px;
   width: 100%;
-  height: 500px;
+  height: 800px;
   background-color: grey;
 }
 
@@ -74,7 +66,7 @@ h1 {
 #supportSection {
   margin-top: -33px;
   width: 100%;
-  height: 500px;
+  height: 800px;
   background-color: lightgrey;
 }
 
@@ -86,7 +78,7 @@ h1 {
 #konnectSection {
   margin-top: -33px;
   width: 100%;
-  height: 500px;
+  height: 800px;
   background-color: darkgray;
 }
 
@@ -95,7 +87,7 @@ h1 {
 
 #footerSection {
   width: 100%;
-  height: 500px;
+  height: 70px;
   background-color: rgb(0, 204, 211);
   color: black;
   font-family: 'Rubik', sans-serif;
@@ -108,6 +100,5 @@ h1 {
 
 #footerSection small {
   position: relative;
-  top: 445px;
 }
 
